Fix wrapping on events section on main page and fix button line wrapping on medium / small sized screens
Closes #26 and closes #27

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -86,10 +86,9 @@
 .eventLinks {
   font-weight: 500;
   display: grid;
-  align-items: center;
+  align-items: start;
   gap: 1rem;
   grid-template-columns: repeat(2, 1fr);
-  height: 80%;
 }
 
 .event {
